# aes-cpp

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  setup-hooks.sh  vcpkg.json
.githooks/: pre-commit
.github/workflows/: aes-ci-windows.yml  aes-ci.yml
cmake/: aes_cppConfig.cmake.in
dev/: gf_multiply_branch_check.sh  install_gtest.sh  main.cpp
examples/: cbc.cpp  cfb.cpp  ctr.cpp  ecb.cpp  gcm.cpp
include/aes_cpp/: aes.hpp  aes_utils.hpp
include/aescpp/: aes.hpp  aes_utils.hpp
speedtest/: main.cpp
src/: AES.cpp  AES.h  AESUtils.cpp  AESUtils.h  aes.cpp  aes_utils.cpp  secure_zero.h
tests/: tests.cpp
vcpkg-port/aes-cpp/: portfile.cmake  vcpkg.json
